--- a/doc/dmd-theory.texi
+++ b/doc/dmd-theory.texi
@@ -1,16 +1,5 @@
-
-Dot-Matrix Display Manipulation with the 6809
-Brian Dominy
-
-1990's era Bally/Williams pinball machines introduced dot matrix displays
-in the backbox in place of segmented score displays.  The dot matrix allowed
-for a wide variety of graphics and animations to be shown, enhancing the overall
-user experience.  Aside from complex graphics, even the ability to draw simple
-text was a big improvement.
-
-These machines were powered by a 2MHz Motorola 6809 microprocessor.  The 6809
-was in charge of everything: switch detection, lamp strobing, solenoid driving --
-and now display control.
+@node Dot-Matrix Performance
+@appendix Dot-Matrix Performance
 
 On older machines without a dot matrix, driving
 segmented score displays was a relatively low horsepower task.  Up until
@@ -26,7 +15,7 @@ The dot matrix display changed that.  The DMD is 128 pixels wide by 32 pixels
 high, for a total of 4096 pixels, or 512 bytes, per frame.  Let's look at some
 of the challenges that are created.
 
-Frame Rate
+@section Frame Rate
 
 Achieving a realistic looking animation means redrawing the display
 frequently enough so that movements appear smooth.  See this article
@@ -45,7 +34,7 @@ Another way of looking at it is that every 50ms, or every 97600 CPU cycles,
 we need to draw and commit another display frame.  Later, we'll talk about
 the CPU instruction set and how efficiently it can do some common operations.
 
-Simulating Color
+@section Simulating Color
 
 The display itself has no notion of color.  Each pixel is either off, or glows
 orange.  WPC games simulated different shades of orange by using a page flipping
@@ -81,7 +70,7 @@ are not discussed further.
 3 pages = effective frame every 7 redraws = 17Hz frame rate
 4 pages = effective frame every 15 redraws = 8Hz frame rate
 
-6809 Instruction Set
+@section 6809 Instruction Set
 
 The 6809 does not provide much support for bulk movement of data, which is
 what is mainly needed to update the display.  Assume for now that a single
@@ -173,8 +162,7 @@ than a single copy, too.
 extra complexity, this is starting to take a significant percentage of the
 total CPU available.
 
-
-The Fastest Copy in Town
+@section The Fastest Copy in Town
 
 It turns out that our copying loop is NOT the most efficient that it can be.
 Remember, the goal is to do bulk copying of data.  There actually are
@@ -212,7 +200,7 @@ and X, and Y: 6 bytes copied at a time. [ Note: I'm not using Y. ]
 
 And that, as far as I can tell, is THE fastest way to copy bytes on the 6809.
 
-Bit Alignment
+@section Bit Alignment
 
 For full 128x32 frames, a bytewise or wordwise copy doesn't need to concern itself
 with the individual bits in the image.  However, when copying smaller bitmaps
@@ -265,7 +253,7 @@ than 16 bits.  This is almost as good; we can read 1 byte per row and write
 3. Everything else.  The generic method always works, but is inefficient for
 all but the largest of bitmaps.
 
-Compression Techniques
+@section Compression Techniques
 
 FreeWPC has not experimented much with various compression algorithms for
 full-screen images.  Compression has not been implemented at all for font
