Correct several switches mark as playfield switches which are not.

--- a/machine/t2/t2.md
+++ b/machine/t2/t2.md
@@ -150,14 +150,14 @@ define MACHINE_START_BALL_MUSIC MUS_T2_PLUNGER
 17: Trough Right, c_decl(sw_trough), noplay
 18: Outhole, outhole, intest, noplay
 21: Slam Tilt, slam-tilt, ingame, cabinet
-23: Ticket Opto, opto
+23: Ticket Opto, opto, cabinet
 25: Left Outlane
 26: Left Return Lane, lamp(LM_LEFT_RETURN_LANE)
 27: Right Return Lane, lamp(LM_RIGHT_RETURN_LANE)
 28: Right Outlane
 31: Gun Loaded
-32: Gun Mark
-33: Gun Home
+32: Gun Mark, noplay, intest, service
+33: Gun Home, noplay, intest, service
 # TODO : it *must* be named this, even though T2 prefers 'grip trigger'
 34: Launch Button, cabinet, launch-button, noplay
 36: Standup Mid. Left, lamp(LM_CENTER_1)
